# grimoirelab

./: .dockerignore  .gitignore  .gitmodules  ADOPTERS.md  AUTHORS  BUILDING.md  CONTRIBUTING.md  CONTRIBUTING_WITH_CODE.md  Chart.yaml  FreeBSD.md  GOVERNANCE.md  MAINTAINERS.md  NEWS  README.md  ROADMAP.md  SECURITY.md  _config.yml  atom_girl  batgirl  catwoman  catwoman.alpha  catwoman.alpha.1  catwoman.beta  community_components.md  con.html  dagger.alpha  elasticgirl.10  elasticgirl.14  elasticgirl.16  elasticgirl.5  elasticgirl.5.1  elasticgirl.7.1  index.html  pyproject.toml  requirements.txt  requirements_dev.txt  setup.py  values.yaml
.github/workflows/: docker-image.yml  grimoirelab-release.yml  release-grimoirelab-component.yml  release.yml  reusable-module-release.yml  tests.yml
_data/: builtwith.yml  conf_speakers.yml  projects.yml  social.yml
_includes/: about.html  built-with.html  conference-nav.html  contact.html  footer.html  head.html  header.html  js.html  navigation.html
_includes/con/: agenda.html  speakers.html  summary.html  venue.html
_layouts/: conference.html  default.html
aws/: README.md  cdk.context.json  cdk.json  package-lock.json  package.json
aws/lib/: aws-ecr-stack.ts  aws-ecs-mordred-stack.ts  aws-ecs-opensearch-stack.ts  aws-ecs-redis-stack.ts  aws-ecs-sortinghat-stack.ts  aws-ecs-stack.ts  aws-nlb-stack.ts  aws-vpc-stack.ts
charts/mordred/: values.yaml
charts/nginx/: values.yaml
charts/opensearch-dashboard/: values.yaml
charts/sortinghat/: values.yaml
charts/sortinghat-worker/: Chart.yaml  values.yaml
con/: index.html
css/: freelancer-red.css  freelancer.css
default-grimoirelab-settings/: aliases.json  apache-hatstall.conf  filebeat-secured.yml  filebeat.yml  identities.yml  menu.yaml  nginx.conf.template  organizations.json  projects.json  setup-docker.cfg  setup-opensearch.cfg  setup-pip.cfg  setup-secured.cfg  setup.cfg  shdb.cfg  uwsgi_params
doc/: README.md  _config.yml  index.html
doc/_data/: builtwith.yml  projects.yml
doc/_includes/: about.html  head.html  header.html  navigation.html
doc/con/: index.html  north-america-2017.html
doc/css/: freelancer-blue.css  freelancer.css
docker/: Dockerfile  Dockerfile-factory  Dockerfile-full  Dockerfile-installed  Dockerfile-secured  README.md  aliases.json  ansible_build_tag.yml  ansible_push.yml  ansible_release.yml  build_grimoirelab  entrypoint-full.sh  entrypoint-secured.sh  entrypoint.sh  identities.yaml  menu-grimoirelab.yaml  menu.yaml  mordred-dashboard.cfg  mordred-full.cfg  mordred-grimoirelab.cfg  mordred-infra-ssl.cfg  mordred-infra.cfg  mordred-local.cfg  mordred-logrotate.conf  mordred-override.cfg  mordred-project.cfg  orgs.json  projects-grimoirelab.json  projects.json  release  repos_local.json  setup-opensearch.cfg  sg_roles_mapping.yml  stage
docker-compose/: README.md  docker-compose-development.yml  docker-compose-opensearch.yml  docker-compose-secured.yml  docker-compose.yml
docs/: README.md  _config.yml  index.html
docs/_data/: builtwith.yml  projects.yml
docs/_includes/: about.html  built-with.html  components.html  data-sources.html  events.html  footer.html  head.html  header.html  js.html  navigation.html
docs/ar/: index.html  main.js
docs/con/: index.html
docs/css/: styles.css
grimoirelab/: _version.py
grimoirelab_pkg/: _version.py
kubernetes/: NOTES.txt  README.md
kubernetes/helm-chart/: Chart.yaml  NOTES.txt  README.md  values.yaml
kubernetes/insecure/: 12-es-sts-deployment.yml  22-mariadb-sts-deployment.yml  30-hatstall-config.yml  32-hatstall-svc.yml  40-kibiter-config.yml  42-kibiter-svc.yml  43-kibiter-deployment.yml  50-mordred-config.yml  51-mordred-config-aliases.yml  53-mordred-secret.yml
kubernetes/secure/: 00-namespace.yml  10-es-config.yml  11-es-svc.yml  12-es-sts-deployment.yml  20-mariadb-secret.yml  21-mariadb-svc.yml  31-hatstall-secret.yml  33-hatstall-deployment.yml  40-kibiter-config.yml  41-kibitier-secret.yml  43-kibiter-deployment.yml  51-mordred-config-aliases.yml  52-mordred-config-orgs.yml  53-mordred-secret.yml  54-mordred-deployment.yml
mail/: contact_me.php
nginx/: Dockerfile  nginx.conf.template
releases/: 0.10.0-rc.1.md  0.10.0.md  0.11.0-rc.1.md  0.11.0-rc.2.md  0.11.0-rc.3.md  0.11.0.md  0.12.0-rc.1.md  0.12.0.md  0.13.0-rc.1.md  0.13.0.md  0.14.0-rc.1.md  0.14.0.md  0.15.0-rc.1.md  0.15.0.md  0.15.1.md  0.16.0-rc.1.md  0.16.0.md  0.16.1-rc.1.md  0.17.0.md  0.18.0-rc.1.md  0.18.0.md  0.19.0-rc.1.md  0.19.0.md  0.2.1  0.2.10  0.2.15  0.2.16  0.2.19  0.2.20  0.2.22  0.2.23  0.2.25  0.2.26  0.2.29  0.2.30  0.2.34  0.2.35  0.2.36  0.2.37  0.2.4  (+199 more)
releases/old/: 0.2.0  0.2.11  0.2.12  0.2.13  0.2.14  0.2.17  0.2.18  0.2.2  0.2.21  0.2.24  0.2.27  0.2.28  0.2.3  0.2.31  0.2.32  0.2.33  0.2.38  0.2.39  0.2.43  0.2.44  0.2.45  0.2.48  0.2.5  0.2.50  0.2.55  0.2.56  0.2.59  0.2.6  0.2.62  0.2.67  0.2.69  0.2.9  18.03-04  18.04-02  18.04-03  18.05-03  18.06-03  18.07-02  18.07-06  18.07-08  (+25 more)
releases/tests/: .gitignore  README.md  check_panels.py  do_release.sh  init-raw.sh  last_commits.py  menu.yaml  orgs_file  projects.json  raw2file.py  setup.cfg
releases/unreleased/: increased-minimum-version-for-python-to-310.yml  python-minimum-version-updated.yml  valkey-image-replacement.yml
templates/: _credentials.tpl  _env.tpl  _envs.tpl  _ports.tpl  _template.tpl  _templates.tpl
tests/: Dockerfile  README.md  conftest.py  do_release.sh  docker-compose-local.yml  docker-compose.yml  last_commits.py  orgs_file  projects.json  raw2file.py  requirements.cfg  setup-panels.cfg  setup.cfg  stage  test_performance.py  utils.py
utils/: README.md  build_grimoirelab  build_pypi.py
(+71 files in other folders)
