[tool.poetry]
name = "grimoirelab"
version = "1.10.0-rc.1"
description = "Tool set for software development analytics"
authors = [
    "GrimoireLab Developers"
]
license = "GPL-3.0+"

readme = "README.md"

homepage = "https://chaoss.github.io/grimoirelab/"
repository = "https://github.com/chaoss/grimoirelab"

keywords = [
    "development",
    "grimoirelab"
]

packages = [
    { include = "grimoirelab" }
]

classifiers = [
   "Development Status :: 5 - Production/Stable",
   "Intended Audience :: Developers",
   "Topic :: Software Development",
   "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
   "Programming Language :: Python :: 3"
]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/chaoss/grimoirelab/issues"

[tool.poetry.scripts]
'grimoirelab' = 'grimoirelab.grimoirelab:main'

[tool.poetry.dependencies]
python = "^3.9"

grimoirelab-toolkit = {version = ">=1.0.10-rc.1", allow-prereleases = true}
perceval-mozilla = {version = ">=1.0.12-rc.2", allow-prereleases = true}
perceval-opnfv = {version = ">=1.0.12-rc.2", allow-prereleases = true}
perceval-puppet = {version = ">=1.0.12-rc.2", allow-prereleases = true}
perceval-weblate = {version = ">=1.0.12-rc.2", allow-prereleases = true}
sortinghat = {version = ">=1.7.0-rc.1", allow-prereleases = true}
kidash = {version = ">=1.0.11-rc.1", allow-prereleases = true}
grimoirelab-panels = {version = ">=1.1.2", allow-prereleases = true}
grimoire-elk = {version = ">=1.3.5-rc.2", allow-prereleases = true}
sirmordred = {version = ">=1.1.7-rc.2", allow-prereleases = true}
cereslib = {version = ">=1.0.10-rc.1", allow-prereleases = true}
graal = {version = ">=1.1.3-rc.2", allow-prereleases = true}
perceval = {version = ">=1.2.0-rc.1", allow-prereleases = true}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
