[tool.poetry]
name = "grimoirelab"
version = "1.13.0"
description = "Tool set for software development analytics"
authors = [
    "GrimoireLab Developers"
]
license = "GPL-3.0+"

readme = "README.md"

homepage = "https://chaoss.github.io/grimoirelab/"
repository = "https://github.com/chaoss/grimoirelab"

keywords = [
    "development",
    "grimoirelab"
]

packages = [
    { include = "grimoirelab" }
]

classifiers = [
   "Development Status :: 5 - Production/Stable",
   "Intended Audience :: Developers",
   "Topic :: Software Development",
   "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
   "Programming Language :: Python :: 3"
]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/chaoss/grimoirelab/issues"

[tool.poetry.scripts]
'grimoirelab' = 'grimoirelab.grimoirelab:main'

[tool.poetry.dependencies]
python = "^3.9"

grimoirelab-toolkit = {version = ">=1.0.11", allow-prereleases = true}
perceval-mozilla = {version = ">=1.1.2", allow-prereleases = true}
perceval-opnfv = {version = ">=1.0.15", allow-prereleases = true}
perceval-puppet = {version = ">=1.0.15", allow-prereleases = true}
perceval-weblate = {version = ">=1.0.15", allow-prereleases = true}
sortinghat = {version = ">=1.9.0", allow-prereleases = true}
kidash = {version = ">=1.0.13", allow-prereleases = true}
grimoirelab-panels = {version = ">=1.1.2", allow-prereleases = true}
grimoire-elk = {version = ">=1.3.8", allow-prereleases = true}
sirmordred = {version = ">=1.1.10", allow-prereleases = true}
cereslib = {version = ">=1.0.13", allow-prereleases = true}
graal = {version = ">=1.1.6", allow-prereleases = true}
perceval = {version = ">=1.2.3", allow-prereleases = true}

[tool.poetry.group.dev.dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
