[tool.poetry]
name = "grimoirelab"
version = "1.9.2"
description = "Tool set for software development analytics"
authors = [
    "GrimoireLab Developers"
]
license = "GPL-3.0+"

readme = "README.md"

homepage = "https://chaoss.github.io/grimoirelab/"
repository = "https://github.com/chaoss/grimoirelab"

keywords = [
    "development",
    "grimoirelab"
]

packages = [
    { include = "grimoirelab" }
]

classifiers = [
   "Development Status :: 5 - Production/Stable",
   "Intended Audience :: Developers",
   "Topic :: Software Development",
   "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
   "Programming Language :: Python :: 3"
]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/chaoss/grimoirelab/issues"

[tool.poetry.dependencies]
python = "^3.11"

grimoirelab-toolkit = {version = ">=1.2.0", allow-prereleases = true}
perceval-mozilla = {version = ">=1.0.11", allow-prereleases = true}
perceval-opnfv = {version = ">=1.0.11", allow-prereleases = true}
perceval-puppet = {version = ">=1.0.11", allow-prereleases = true}
perceval-weblate = {version = ">=1.0.11", allow-prereleases = true}
sortinghat = {version = ">=1.6.2", allow-prereleases = true}
perceval = {version = ">=1.1.1", allow-prereleases = true}
grimoirelab-chronicler = {git = "https://github.com/chaoss/grimoirelab-chronicler.git", allow-prereleases = true}
grimoirelab-core = {git = "https://github.com/chaoss/grimoirelab-core.git", allow-prereleases = true}

[tool.poetry.group.tests]
optional = true

[tool.poetry.group.tests.dependencies]
pytest = "^8.3.5"
testcontainers = {extras = ["generic", "mysql", "opensearch", "redis"], version = "^4.9.2"}
flake8 = "^7.1.2"
dulwich = "^0.22.8"
opensearch-py = "^3.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
